...
            top: 0,
            left: 0, 
            right: 0,
            bottom: 0, 
            justifyContent: 'center', 
            alignItems: 'center'}}
            testID="login-screen"
        >
            <Lottie source={require('../logo-animation.json')} loop={false} autoPlay={true} style={{width: "40%"}} testID="lottie-anim" />
            {/* Disabling due to bug in RNE causing inconsistent crashes */}
            {/* <Tab value={index} onChange={(e) => setIndex(e)} dense style={{width: "70%"}}>
                <Tab.Item>Login</Tab.Item>
                <Tab.Item>Guest User</Tab.Item>
            </Tab> */}
            <View style={{paddingTop: "5%"}}>
...
